# rust-neural-network-xor

./: Cargo.toml
src/: files.rs  main.rs
