[package]
name = "xor-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
shuffle = "0.1.7"
rand = "0.8.5"
savefile = "0.11.0"
savefile-derive = "0.11.0"
indicatif = "0.17.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto=true
